--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "react-app"
     ]
   },
-  "homepage": "https://mjarka.github.io/logopeda/",
+  "homepage": "https://mjarka.github.io/logopeda",
   "browserslist": {
     "production": [
       ">0.5%",
